fix project name overflow.

--- a/app/components/thumbnail/avatar-box.module.css
+++ b/app/components/thumbnail/avatar-box.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  width: 100%;
 }
 
 .tokenImgBox {
@@ -26,6 +27,10 @@
   color: #fff;
   white-space: nowrap;
   text-align: left;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .tickerContent1 {
@@ -66,4 +71,8 @@
   &.launch3 {
     background-color: rgba(100, 43, 255, 1);
   }
+}
+
+.InfoWrapper {
+  width: calc(100% - 56px);
 }
